# raytracer

./: Cargo.toml  README.org  flake.nix
lib/: Cargo.toml
lib/src/: lib.rs  raytracer.rs
lib/src/math/: camera.rs  mod.rs
lib/src/object/: figures.rs  light.rs  material.rs  mod.rs
src/: main.rs  raytracer.rs
src/lib/: body.rs  math.rs  mod.rs  object.rs  raytracer.rs
src/lib/math/: camera.rs  ray.rs  test.rs  vector.rs
src/lib/object/: figures.rs  light.rs  material.rs
wasm_lib/: Cargo.toml
wasm_lib/src/: lib.rs
wasm_lib/www/: index.html  index.js  package-lock.json  package.json
