[package]
name = "wasm_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
winit = { version = "0.25.0", features = [ "web-sys" ] }
lib = { path = "../lib" }
web-sys = "0.3.51"
winit_input_helper = "0.10.0"
